added night one french translations

--- a/Assets/Resources/I18n/fr.csv
+++ b/Assets/Resources/I18n/fr.csv
@@ -50,48 +50,48 @@ camera.mainhall,Salle principale
 camera.partsservice,Atelier de réparation
 camera.showstage,Scène de spectacle
 camera.gamearea,Zone de jeu
-camera.prizecorner,Coin des récompenses
+camera.prizecorner,Comptoir des prix
 camera.kidscove,Crique des enfants
 monitor.musicbox,Boîte à musique mécanique
 monitor.holdmusicbox,"Maintenir <sprite name=""WiiU-B"">"
 subtitle.phoneringtone,*Sonnerie de téléphone*
 nightone.phoneguy.lineone,"Euh, salut ? Salut ? Euh, bonjour et bienvenue pour votre nouveau job d'été dans la nouvelle pizzeria de Freddy Fazbear."
-nightone.phoneguy.linetwo,"Uh, I'm here to talk you through some of the things you can expect to see during your first week here"
-nightone.phoneguy.linethree,and to help you get started down this new and exciting career path.
-nightone.phoneguy.linefour,"Uh, now, I want you to forget anything you may have heard about the old location, you know."
-nightone.phoneguy.linefive,"Uh, some people still have a somewhat negative impression of the company."
-nightone.phoneguy.linesix,"Uh... that old restaurant was kind of left to rot for quite a while, but I want to reassure you,"
-nightone.phoneguy.lineseven,"Fazbear Entertainment is committed to family fun and above all, safety."
-nightone.phoneguy.lineheight,"They've spent a small fortune on these new animatronics, uh, facial recognition,"
-nightone.phoneguy.linenine,"advanced mobility, they even let them walk around during the day. Isn't that neat? *clears throat* But most importantly,"
-nightone.phoneguy.lineten,"they're all tied into some kind of criminal database, so they can detect a predator a mile away."
-nightone.phoneguy.lineeleven,"Heck, we should be paying them to guard you."
-nightone.phoneguy.linetwelve,"Uh, now that being said, no new system's without its... kinks."
-nightone.phoneguy.linethirteen,Uh... you're only the second guard to work at that location.
-nightone.phoneguy.linefourteen,"Uh, the first guy finished his week, but complained about... conditions."
-nightone.phoneguy.linefifteen,"Uh, we switched him over to the day shift, so hey, lucky you, right?"
-nightone.phoneguy.linesixteen,"Uh mainly he expressed concern that certain characters seemed to move around at night,"
-nightone.phoneguy.lineseventeen,"and even attempted to get into his office. Now, from what we know, that should be impossible."
-nightone.phoneguy.lineeighteen,"Uh, that restaurant should be the safest place on earth."
-nightone.phoneguy.linenineteen,"So while our engineers don't really have an explanation for this, the working theory is that..."
-nightone.phoneguy.linetwenty,"the robots were never given a proper ""night mode"". So when it gets quiet, they think they're in the wrong room,"
-nightone.phoneguy.linetwentyone,"so then they go try to find where the people are, and in this case, that's your office."
-nightone.phoneguy.linetwentytwo,"So our temporary solution is this: there's a music box over by the Prize Counter,"
-nightone.phoneguy.linetwentythree,and it's rigged to be wound up remotely.
-nightone.phoneguy.linetwentyfour,"So just, every once in a while, switch over to the Prize Counter video feed and wind it up for a few seconds."
-nightone.phoneguy.linetwentyfive,"It doesn't seem to affect all of the animatronics, but it does affect... one of them. *clears throat*"
-nightone.phoneguy.linetwentysix,"Uh, and as for the rest of them, we have an even easier solution."
-nightone.phoneguy.linetwentyseven,"You see, there may be a minor glitch in the system,"
-nightone.phoneguy.linetwentyheight,"something about robots seeing you as an exoskeleton without his costume on,"
-nightone.phoneguy.linetwentynine,"and wanting to stuff you in a suit, so hey, we've given you an empty Freddy Fazbear head, problem solved!"
-nightone.phoneguy.linethirty,"You can put it on anytime, and leave it on for as long as you want."
-nightone.phoneguy.linethirtyone,"Eventually anything that wandered in, will wander back out."
-nightone.phoneguy.linethirtytwo,"Uh, something else worth mentioning is kind of the modern design of the building."
-nightone.phoneguy.linethirtythree," You may have noticed there are no doors for you to close, heh. But hey, you have a light!"
-nightone.phoneguy.linethirtyfour,"And even though your flashlight can run out of power, the building cannot. So, don't worry about the place going dark."
-nightone.phoneguy.linethirtyfive,"Well, I think that's it. Uh, you should be golden. Uh, check the lights, put on the Freddy head if you need to,"
-nightone.phoneguy.linethirtysix,"uh, keep the music box wound up, piece of cake."
-nightone.phoneguy.linethirtyseven,"Have a good night, and I'll talk to you tomorrow."
+nightone.phoneguy.linetwo,"Euh, je suis là pour te parler de choses que tu pourrais voir pendant cette premiere semaine ici"
+nightone.phoneguy.linethree,et pour t'aider à commencer cette nouvelle et pasionnante voie professionnelle.
+nightone.phoneguy.linefour,"Euh, maintenant, j'aimerais que tu oublies tout ce que tu as entendu à propos de cette endroit, d'accord ?"
+nightone.phoneguy.linefive,"Euh, certaines personnes ont encore une impression quelque peu négative de l'entreprise."
+nightone.phoneguy.linesix,"Euh... ce vieux restaurant a été laissé à l'abandon un bon bout de temps, mais je tiens à te rassurer,"
+nightone.phoneguy.lineseven,"Fazbear Entertainment s'engage à offrir du plaisir en famille et surtout, de la sécurité."
+nightone.phoneguy.lineheight,"Ils ont dépensé une petite fortune dans ces nouveaux animatroniques, euh, reconnaissance faciale,"
+nightone.phoneguy.linenine,"mobilité avancée, ils les laissent même se promener dans la journée, c'est pas génial ? *se racle la gorge*"
+nightone.phoneguy.lineten,"Mais plus important, ils sont tous connectés à une sorte de base de données criminelle,"
+nightone.phoneguy.lineeleven,"ce qui leur permet de détecter un prédateur à un kilomètre de distance. On devrait les payer pour qu’ils te protègent, haha."
+nightone.phoneguy.linetwelve,"Euh, maintenant que tout ça a été dit, pas de nouveau système sans ses... défauts."
+nightone.phoneguy.linethirteen,Euh... tu es seulement le deuxième agent de sécurité à travailler ici
+nightone.phoneguy.linefourteen,"Euh... le premier a fini sa semaine, mais s'est pleint des... conditions."
+nightone.phoneguy.linefifteen,"Euh, on l'a transféré avec sur l'équipe de jour, alors bon, c'est ton jour de chance, non ?"
+nightone.phoneguy.linesixteen,"Euh, il a surtout exprimé son inquiétude quant au fait que certains personnages semblaient se déplacer la nuit,"
+nightone.phoneguy.lineseventeen,"et on même tenté d'entrer dans son bureau. Maintenant, de ce que nous savons, cela devrait être impossible."
+nightone.phoneguy.lineeighteen,"Euh, ce restaurant doit probablement être l'endroit le plus sécurisé sur terre."
+nightone.phoneguy.linenineteen,"Même si nos ingénieurs n'ont pas vraiment d'explication à ce problème, la théorie est que..."
+nightone.phoneguy.linetwenty,"Les robots n'ont jamais eu de véritable ""mode nuit"". Quand il n'y a plus aucun bruit, ils pensent être dans la mauvaise pièce,"
+nightone.phoneguy.linetwentyone,"et donc essayent de trouver où sont les gens, et dans ce cas, dans ton bureau."
+nightone.phoneguy.linetwentytwo,"Donc voici notre solution temporaire: il y a une boîte à musique près du comptoir des prix,"
+nightone.phoneguy.linetwentythree,et elle est conçue pour être remontée à distance.
+nightone.phoneguy.linetwentyfour,"Donc de temps en temps, passe sur le flux vidéo du comptoir des prix et remonte la quelques secondes."
+nightone.phoneguy.linetwentyfive,"Ça ne semble pas affecter tous les animatroniques, mais cela affecte... l'un d'entre eux. *se racle la gorge*"
+nightone.phoneguy.linetwentysix,"Euh, et pour les autres, nous avons une solution encore plus simple."
+nightone.phoneguy.linetwentyseven,"Tu vois, il peut y avoir un petit problème dans le système,"
+nightone.phoneguy.linetwentyheight,"quelque chose fait que les robots qui te voient comme un exosquelette sans son costume,"
+nightone.phoneguy.linetwentynine,"et veulent donc te mettre dans un costume, donc, nous t'avons donné une tête de Freddy vide, problème résolu !"
+nightone.phoneguy.linethirty,"Tu peux le mettre dans tu veux, et le retirer autant de temps que tu le souhaites."
+nightone.phoneguy.linethirtyone,Tout ce qui est entré finira par partir.
+nightone.phoneguy.linethirtytwo,"Euh, une autre chose qui mérite d’être mentionnée est la conception moderne du bâtiment."
+nightone.phoneguy.linethirtythree,"Tu dois avoir remarqué qu'il n'y a pas de portes que tu puisses fermer, mais tu as une lumière !"
+nightone.phoneguy.linethirtyfour,"Et même si la batterie de ta lampe torche peut se vider, le bâtiment ne peut pas. Donc ne t'inquiète pas tu ne finiras pas"
+nightone.phoneguy.linethirtyfive,"ta nuit dans le noir. Bien, je penses que tu sais tout. Euh, utilises les lumières, met le masque de Freddy si besoin,"
+nightone.phoneguy.linethirtysix,"euh, garde la boîte à musique remontée, c'est du gâteau."
+nightone.phoneguy.linethirtyseven,"Passe une bonne nuit, et je te rappelle demain."
 nighttwo.phoneguy.lineone,"Ah...hello, hello! Uh, see, I told you your first night wouldn't be a problem. You're a natural!"
 nighttwo.phoneguy.linetwo,"Uh, by now I'm sure you've noticed the older models sitting in the back room."
 nighttwo.phoneguy.linethree,"Uh, those are from the previous location. We just use them for parts now."
