save difficulties and load custom night

--- a/Assets/Resources/I18n/fr.csv
+++ b/Assets/Resources/I18n/fr.csv
@@ -26,7 +26,7 @@ customnight.freddyscircus,Cirque de Freddy
 customnight.cupcakechallenge,Défi cupcake
 customnight.fazbearfever,Fièvre de Fazbear
 customnight.goldenfreddy,Golden Freddy
-customnight.ready,Ready
+customnight.ready,Prêt
 difficulty.easy,Facile
 difficulty.medium,Moyenne
 difficulty.hard,Difficile
